--- a/libexec/httpd/bozohttpd.8
+++ b/libexec/httpd/bozohttpd.8
@@ -1,6 +1,6 @@
-.\"	$eterna: bozohttpd.8,v 1.74 2006/05/17 08:19:10 mrg Exp $
+.\"	$eterna: bozohttpd.8,v 1.78 2008/03/03 03:36:11 mrg Exp $
 .\"
-.\" Copyright (c) 1997-2006 Matthew R. Green
+.\" Copyright (c) 1997-2008 Matthew R. Green
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March 22, 2005
+.Dd March 3, 2008
 .Dt BOZOHTTPD 8
 .Os BOZOS
 .Sh NAME
@@ -76,7 +76,7 @@ This option enables daemon mode, where
 detaches from the current terminal, running in the background and
 servicing HTTP requests.
 .It Fl C Ar suffix cgihandler
-This option adds a new CGI handler program for a particularly file type.
+This option adds a new CGI handler program for a particular file type.
 The
 .Ar suffix
 should be any normal file suffix, and the
@@ -252,7 +252,9 @@ to
 .Ar index .
 .It Fl Z Ar certificate_path privatekey_path
 This option sets the path to the server certificate file and the private key file
-in pem format.  It also causes bozohttpd to start SSL mode.
+in pem format.  It also causes
+.Nm
+to start SSL mode.
 .El
 .Pp
 Note that in
@@ -282,8 +284,8 @@ A typical
 .Xr inetd.conf 5
 entry would be:
 .Bd -literal
-www stream tcp  nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd /var/www
-www stream tcp6 nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd /var/www
+http stream tcp  nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd /var/www
+http stream tcp6 nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd /var/www
 .Ed
 .Pp
 This would serve web pages from
@@ -302,9 +304,11 @@ Using the
 you can provide multiple IP-address based HTTP servers by having multiple
 listening ports with different configurations.
 .Sh EXAMPLES
-To configure set of virtual hosts, one would use an entry like:
+To configure set of virtual hosts, one would use an
+.Xr inetd.conf 5
+entry like:
 .Bd -literal
-www stream tcp  nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd -v /var/vroot /var/www
+http stream tcp  nowait:600 httpd /usr/pkg/libexec/bozohttpd bozohttpd -v /var/vroot /var/www
 .Ed
 .Pp
 and inside
@@ -328,13 +332,9 @@ This server supports the
 .Em HTTP/1.0
 and
 .Em HTTP/1.1
-standards.  The
-.Em HTTP/1.1
-support is based on the Internet Draft
-.Dq draft-ietf-http-v11-spec-rev-06 ,
-which has been replaced by RFC 2616 as the standard.
-Support for these
-protocols is very minimal and many optional features are not supported.
+standards.
+Support for these protocols is very minimal and many optional features are
+not supported.
 .Pp
 .Nm
 can be compiled without CGI support (NO_CGIBIN_SUPPORT), user
@@ -345,7 +345,42 @@ macros when building
 .Nm .
 .Sh HTTP BASIC AUTHORISATION
 .Nm
-has support for HTTP Basic Authorisation that is excluded by default.
+has support for HTTP Basic Authorisation.
+If a file named
+.Pa .htpasswd
+exists in the directory of the current request,
+.Nm
+will restrict access to documents in that directory
+using the RFC 2617 HTTP
+.Dq Basic
+authentication scheme.
+.Pp
+Note:
+This does not recursively protect any sub-directories.
+.Pp
+The
+.Pa .htpasswd
+file contains lines delimited with a colon containing
+usernames and passwords hashed with
+.Xr crypt 3 ,
+for example:
+.Bd -literal
+heather:$1$pZWI4tH/$DzDPl63i6VvVRv2lJNV7k1 
+jeremy:A.xewbx2DpQ8I
+.Ed
+.Pp
+On
+.Nx ,
+the
+.Xr pwhash 1
+utility may be used to generate hashed passwords.
+.Pp
+While 
+.Nm
+distributed with
+.Nx
+has support for HTTP Basic Authorisation enabled by default,
+the portable distribution it is excluded.
 Compile
 .Nm
 with
@@ -353,7 +388,6 @@ with
 on the compiler command line to enable this support.  It may require
 linking with the crypt library, using
 .Dq -lcrypt .
-.Nm .
 .Sh FILES
 .Nm
 looks for a couple of special files in directories that allow certain features
@@ -404,7 +438,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20050410.
+version 20080303.
 .Sh AUTHORS
 .Nm
 was written by Matthew R. Green
@@ -412,6 +446,14 @@ was written by Matthew R. Green
 .Pp
 The large list of contributors includes:
 .Bl -dash
+.It
+Arnaud Lacombe
+.Aq alc@netbs.dorg
+provided some clean up for memory leaks
+.It
+Christoph Badura
+.Aq bad@bsd.de
+provided Range: header support
 .It
 Julian Coleman
 .Aq jdc@coris.org.uk
@@ -462,13 +504,17 @@ Luke Mewburn
 provided many various fixes, including cgi-bin fixes & enhancements,
 HTTP basic authorisation support and much code clean up
 .It
+Jeremey Reed
+.Aq reed@netbsd.org
+provided several clean up fixes, and man page updates
+.It
 Scott Reynolds
 .Aq scottr@netbsd.org
 provided various fixes
 .It
 Tyler Retzlaff
 .Aq rtr@eterna.com.au
-provided SSL support, cgi-bin fixes and random other stuff
+provided SSL support, cgi-bin fixes and much other random other stuff
 .It
 Steve Rumble
 .Aq rumble@ephemeral.org
